rules/RULANGParser.js
// Generated from ./rules/RULANG.g4 by ANTLR 4.5.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var RULANGListener = require('./RULANGListener').RULANGListener;
var grammarFileName = "RULANG.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ 'null', "'@rr_uri'", "'@rr_version_uri'", "'@include'", 
                     "'section'", "'schema'", "'{'", "'}'", "'meta_graph'", 
                     "'rules'", "'['", "']'", "'debug'", "':'", "'SELECT'", 
                     "'FROM'", "','", "'rsc_configuration'", "'knowledge_base'", 
                     "'when '", "'then'", "'('", "'s'", "'salience'", "'='", 
                     "')'", "'.'", "'triple'", "'if'", "'resource'", "'true'", 
                     "'false'", "'null'", "'f'", "'duration'", "'time'", 
                     "'date'", "'?'", "'not'", "'create_uuid_resource'", 
                     "'is_no_value'", "'literal_regex'", "'<'", "'>'", "'exists_not'", 
                     "'=='", "'<='", "'>='", "'and'", "'or'", "'+'", "'-'", 
                     "'*'", "'/'", 'null', "'rule'" ];

var symbolicNames = [ 'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', 'null', 'null', 
                      'null', 'null', 'null', 'null', 'null', "RULE_PRIORITY", 
                      "RULE", "STRING", "LineTerminator", "NUMBER", "ID", 
                      "WS", "COMMENT", "LINE_COMMENT" ];

var ruleNames =  [ "goal", "uriStatement", "versionUriStatement", "includeStatement", 
                   "sectionBlock", "section", "schemaSection", "metaGraphSection", 
                   "primaryKnowledgeRulesSection", "querySection", "queryRule", 
                   "rscConfigurationSection", "knowledgeBaseSection", "ruleDef", 
                   "ruleHeader", "predicates", "inferences", "tripleLiteral", 
                   "tripleAssertion", "resourceDecl", "configProp", "filter", 
                   "expression", "atom", "resourceLiteral", "stringLiteral", 
                   "booleanLiteral", "nullLiteral", "numberLiteral", "floatLiteral", 
                   "intLiteral", "calendarLiteral", "durationLiteral", "timeLiteral", 
                   "dateLiteral", "queryId", "prefixedID", "unaryOperator", 
                   "binaryOperator", "boolOperator", "numOperator" ];

function RULANGParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

RULANGParser.prototype = Object.create(antlr4.Parser.prototype);
RULANGParser.prototype.constructor = RULANGParser;

Object.defineProperty(RULANGParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RULANGParser.EOF = antlr4.Token.EOF;
RULANGParser.T__0 = 1;
RULANGParser.T__1 = 2;
RULANGParser.T__2 = 3;
RULANGParser.T__3 = 4;
RULANGParser.T__4 = 5;
RULANGParser.T__5 = 6;
RULANGParser.T__6 = 7;
RULANGParser.T__7 = 8;
RULANGParser.T__8 = 9;
RULANGParser.T__9 = 10;
RULANGParser.T__10 = 11;
RULANGParser.T__11 = 12;
RULANGParser.T__12 = 13;
RULANGParser.T__13 = 14;
RULANGParser.T__14 = 15;
RULANGParser.T__15 = 16;
RULANGParser.T__16 = 17;
RULANGParser.T__17 = 18;
RULANGParser.T__18 = 19;
RULANGParser.T__19 = 20;
RULANGParser.T__20 = 21;
RULANGParser.T__21 = 22;
RULANGParser.T__22 = 23;
RULANGParser.T__23 = 24;
RULANGParser.T__24 = 25;
RULANGParser.T__25 = 26;
RULANGParser.T__26 = 27;
RULANGParser.T__27 = 28;
RULANGParser.T__28 = 29;
RULANGParser.T__29 = 30;
RULANGParser.T__30 = 31;
RULANGParser.T__31 = 32;
RULANGParser.T__32 = 33;
RULANGParser.T__33 = 34;
RULANGParser.T__34 = 35;
RULANGParser.T__35 = 36;
RULANGParser.T__36 = 37;
RULANGParser.T__37 = 38;
RULANGParser.T__38 = 39;
RULANGParser.T__39 = 40;
RULANGParser.T__40 = 41;
RULANGParser.T__41 = 42;
RULANGParser.T__42 = 43;
RULANGParser.T__43 = 44;
RULANGParser.T__44 = 45;
RULANGParser.T__45 = 46;
RULANGParser.T__46 = 47;
RULANGParser.T__47 = 48;
RULANGParser.T__48 = 49;
RULANGParser.T__49 = 50;
RULANGParser.T__50 = 51;
RULANGParser.T__51 = 52;
RULANGParser.T__52 = 53;
RULANGParser.RULE_PRIORITY = 54;
RULANGParser.RULE = 55;
RULANGParser.STRING = 56;
RULANGParser.LineTerminator = 57;
RULANGParser.NUMBER = 58;
RULANGParser.ID = 59;
RULANGParser.WS = 60;
RULANGParser.COMMENT = 61;
RULANGParser.LINE_COMMENT = 62;

RULANGParser.RULE_goal = 0;
RULANGParser.RULE_uriStatement = 1;
RULANGParser.RULE_versionUriStatement = 2;
RULANGParser.RULE_includeStatement = 3;
RULANGParser.RULE_sectionBlock = 4;
RULANGParser.RULE_section = 5;
RULANGParser.RULE_schemaSection = 6;
RULANGParser.RULE_metaGraphSection = 7;
RULANGParser.RULE_primaryKnowledgeRulesSection = 8;
RULANGParser.RULE_querySection = 9;
RULANGParser.RULE_queryRule = 10;
RULANGParser.RULE_rscConfigurationSection = 11;
RULANGParser.RULE_knowledgeBaseSection = 12;
RULANGParser.RULE_ruleDef = 13;
RULANGParser.RULE_ruleHeader = 14;
RULANGParser.RULE_predicates = 15;
RULANGParser.RULE_inferences = 16;
RULANGParser.RULE_tripleLiteral = 17;
RULANGParser.RULE_tripleAssertion = 18;
RULANGParser.RULE_resourceDecl = 19;
RULANGParser.RULE_configProp = 20;
RULANGParser.RULE_filter = 21;
RULANGParser.RULE_expression = 22;
RULANGParser.RULE_atom = 23;
RULANGParser.RULE_resourceLiteral = 24;
RULANGParser.RULE_stringLiteral = 25;
RULANGParser.RULE_booleanLiteral = 26;
RULANGParser.RULE_nullLiteral = 27;
RULANGParser.RULE_numberLiteral = 28;
RULANGParser.RULE_floatLiteral = 29;
RULANGParser.RULE_intLiteral = 30;
RULANGParser.RULE_calendarLiteral = 31;
RULANGParser.RULE_durationLiteral = 32;
RULANGParser.RULE_timeLiteral = 33;
RULANGParser.RULE_dateLiteral = 34;
RULANGParser.RULE_queryId = 35;
RULANGParser.RULE_prefixedID = 36;
RULANGParser.RULE_unaryOperator = 37;
RULANGParser.RULE_binaryOperator = 38;
RULANGParser.RULE_boolOperator = 39;
RULANGParser.RULE_numOperator = 40;

function GoalContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RULANGParser.RULE_goal;
    return this;
}

GoalContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GoalContext.prototype.constructor = GoalContext;

GoalContext.prototype.uriStatement = function() {
    return this.getTypedRuleContext(UriStatementContext,0);
};

GoalContext.prototype.versionUriStatement = function() {
    return this.getTypedRuleContext(VersionUriStatementContext,0);
};

GoalContext.prototype.includeStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IncludeStatementContext);
    } else {
        return this.getTypedRuleContext(IncludeStatementContext,i);
    }
};

GoalContext.prototype.sectionBlock = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(SectionBlockContext);
    } else {
        return this.getTypedRuleContext(SectionBlockContext,i);
    }
};

GoalContext.prototype.enterRule = function(listener) {
    if(listener instanceof RULANGListener ) {
        listener.enterGoal(this);
	}
};

GoalContext.prototype.exitRule = function(listener) {
    if(listener instanceof RULANGListener ) {
        listener.exitGoal(this);
	}
};




RULANGParser.GoalContext = GoalContext;

RULANGParser.prototype.goal = function() {

    var localctx = new GoalContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RULANGParser.RULE_goal);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.uriStatement();
        this.state = 83;
        this.versionUriStatement();
        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RULANGParser.T__2) {
            this.state = 84;
            this.includeStatement();
            this.state = 89;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 93;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===RULANGParser.T__3) {
            this.state = 90;
            this.sectionBlock();
            this.state = 95;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function UriStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RULANGParser.RULE_uriStatement;
    this.value = null; // Token
    return this;
}

UriStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
UriStatementContext.prototype.constructor = UriStatementContext;

UriStatementContext.prototype.STRING = function() {
    return this.getToken(RULANGParser.STRING, 0);
};

UriStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof RULANGListener ) {
        listener.enterUriStatement(this);
	}
};

UriStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof RULANGListener ) {
        listener.exitUriStatement(this);
	}
};




RULANGParser.UriStatementContext = UriStatementContext;

RULANGParser.prototype.uriStatement = function() {

    var localctx = new UriStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RULANGParser.RULE_uriStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 96;
        this.match(RULANGParser.T__0);
        this.state = 97;
        localctx.value = this.match(RULANGParser.STRING);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VersionUriStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RULANGParser.RULE_versionUriStatement;
    this.value = null; // Token
    return this;
}

VersionUriStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VersionUriStatementContext.prototype.constructor = VersionUriStatementContext;

VersionUriStatementContext.prototype.STRING = function() {
    return this.getToken(RULANGParser.STRING, 0);
};

VersionUriStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof RULANGListener ) {
        listener.enterVersionUriStatement(this);
	}
};

VersionUriStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof RULANGListener ) {
        listener.exitVersionUriStatement(this);
	}
};




RULANGParser.VersionUriStatementContext = VersionUriStatementContext;

RULANGParser.prototype.versionUriStatement = function() {

    var localctx = new VersionUriStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, RULANGParser.RULE_versionUriStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 99;
        this.match(RULANGParser.T__1);
        this.state = 100;
        localctx.value = this.match(RULANGParser.STRING);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
